apps/web-annajah/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-annajah
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: web-annajah
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`annajahfoundation.sch.id`)
      kind: Rule
      services:
        - name: web-annajah-wrr
          kind: TraefikService
      middlewares:
        - name: ndmastery-secure-headers
        - name: ndmastery-compress
  tls:
    secretName: web-annajah-tls
    options:
      name: ndmastery-modern-tls
      namespace: ndmastery
